

==============================
Release 5.4.0.0
==============================
2014-08-31    ShowBrowseButton was not working in the BrowseTextBox
2014-08-24    The change of the ContentAlignment in the EnhancedTextBox has affected the mouse cursor too
2014-07-31    Update project to .net 4.5.1


==============================
Release 5.2.0.0
==============================
2014-06-27    EnhancedTreeView: Add command to be executed if the selected item is changed
2014-06-26    EnhancedTreeViewItem: Correct binding of ContentStretching if its set on the parent tree only
2014-06-25    NavigationBar: Add NavigationBar
2014-06-08    NullToBooleanConverter, NullToVisibilityConverter: Make converters sealed
              WPFMessageBox: The background control should be behind the buttons panel as well
              WPFMessageBox: Take care about the focus
              WPFMessageBox: The background can hold an additional object
              WPFMessageBox: Add style options to modify element
              WPFMessageBox: Additional controls can be placed
              WPFMessageBox: If the details are open use another property if resizing is possible or not
              WPFMessageBox: Add possibility to set the details content
              WPFMessageBox: Add properties to define different sizes with the details open
              WPFMessageBox: Remove Height and Width option properties out of the WPFMessageBoxOptions; since it does SizeToContent is has no effect anyway
              WPFMessageBox: Add possibility to show and hide a details button (there is no details section so far)
              WPFMessageBox: Organize options for the window to a separate object in the WPFMessageBoxOptions
              WPFMessageBox: Since not everything can be changed by assigning the window style, the whole functionality got removed
              WPFMessageBox: The window shows the minimize and maximize buttons if it can be resized