@@ -26,14 +26,26 @@ THE SOFTWARE
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:DW.WPFToolkit.Tryout.Controls"
+        xmlns:Controls1="http://wpftoolkit.my-libraries.com/v5"
         Title="DW.WPFToolkit.Tryout"
         Height="800"
         Width="800">
 
-    <TabControl TabStripPlacement="Left">
-        <TabItem Header="WPFMessageBox" AutomationProperties.AutomationId="CUI_WPFMessageBox">
-            <Controls:WPFMessageBoxDemo />
-        </TabItem>
-    </TabControl>
+    <StackPanel>
+        <StackPanel.Resources>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        </StackPanel.Resources>
+
+        <CheckBox Content="Visible" x:Name="CheckBox" />
+
+        <Controls1:EllipsedProgressBar Visibility="{Binding IsChecked, ElementName=CheckBox, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                       Value="25"
+                                       Minimum="0"
+                                       Maximum="100"
+                                       OutherRadius="30"
+                                       RotateSpeed="0.5"
+                                       IsInversed="True"
+                                       IsIndeterminate="True" />
+    </StackPanel>
 
 </Window>
