@@ -3,6 +3,7 @@
 ==============================
 Release 5.4.0.0
 ==============================
+2014-10-28    EllipsedProgressBar: Handle it when the element is collapsed on load and enabled later
 2014-08-31    ShowBrowseButton was not working in the BrowseTextBox
 2014-08-24    The change of the ContentAlignment in the EnhancedTextBox has affected the mouse cursor too
 2014-07-31    Update project to .net 4.5.1
